Finished adding Bug-type moves.

--- a/moves_105.ini
+++ b/moves_105.ini
@@ -164,6 +164,140 @@ ranges = Burst 1 or Line 6, Powder
 effect = All targets hit by Rage Powder are Enraged. While enraged, they must shift to target the user when using a Move or Attack if the user is within reach. If the user is Fainted or Switched out, all targets hit by Rage Powder are cured of rage.
 contest_type = Smart
 contest_effect = Tease
+[Signal Beam]
+page = 348
+type = Bug
+frequency = EOT
+ac = 2
+damage_base = 8
+damage_roll = 2d8+10
+damage_fixed = 19
+class = Special
+ranges = 6, 1 Target
+effect = Signal Beam confuses the target on 19+.
+contest_type = Beauty
+contest_effect = Incentives
+[Silver Wind]
+page = 348
+type = Bug
+frequency = At-Will
+ac = 2
+damage_base = 6
+damage_roll = 2d6+8
+damage_fixed = 15
+class = Special
+ranges = 6, 1 Target, Spirit Surge
+effect = On 19+, the user has each of its stats raised by +1 Combat Stage.
+contest_type = Beauty
+contest_effect = Incentives
+[Spider Web]
+page = 348
+type = Bug
+frequency = Scene, 2
+ac = None
+class = Status
+ranges = 5
+effect = Spider Web cannot miss. The target is Stuck and Trapped. If the user is freed of the Stuck condition, they are freed of Trapped as well.
+contest_type = Smart
+contest_effect = Sabotage
+special = Grants Threaded
+[Steamroller]
+page = 348
+type = Bug
+frequency = EOT
+ac = 2
+damage_base = 7
+damage_roll = 2d6+10
+damage_fixed = 17
+class = Physical
+ranges = Melee, Pass
+effect = Steamroller Flinches the target on 15+. If the target is Small, Steamroller deals an additional +5 Damage.
+contest_type = Tough
+contest_effect = Steady Performance
+[Sticky Web]
+page = 348
+type = Bug
+frequency = EOT
+ac = None
+class = Status
+ranges = 6, Hazard
+effect = Set 8 square meters of Sticky Web hazards within your range, all 8 meters must be adjacent with at least one other space of Sticky Web. Sticky Web causes Terrain to become Slow Terrain, and a foe that runs into the hazard has its Speed lowered by one stage, and they become Slowed until the end of their next turn. Flying-type Pokémon and Pokémon and Trainers with Levitate are not affected by Sticky Web. Bug-type Pokémon may move over Sticky Web harmlessly, destroying the Hazards as they do so.
+contest_type = Smart
+contest_effect = Sabotage
+special = Grants Threaded
+[String Shot]
+page = 348
+type = Bug
+frequency = At-Will
+ac = 3
+class = Status
+ranges = Cone 2
+effect = Targets have their Speed CS lowered by -1. If this lowers their Speed CS to -6, or if their Speed CS was already at -6, the target is instead Stuck.
+contest_type = Smart
+contest_effect = Excitement
+special = Grants Threaded
+[Struggle Bug]
+page = 348
+type = Bug
+frequency = At-Will
+ac = 2
+damage_base = 5
+damage_roll = 1d8+8
+damage_fixed = 13
+class = Special
+ranges = Cone 2
+effect = On hit, lowers the target’s Special Attack by -1 CS.
+contest_type = Smart
+contest_effect = Excitement
+[Tail Glow]
+page = 349
+type = Bug
+frequency = Scene
+ac = None
+class = Status
+ranges = Self
+effect = Raise the user’s Special Attack 3 Combat Stages.
+contest_type = Beauty
+contest_effect = Get Ready!
+special = Grants Glow
+[Twineedle]
+page = 349
+type = Bug
+frequency = At-Will
+ac = 3
+damage_base = 3
+damage_roll = 1d6+5
+damage_fixed = 9
+class = Physical
+ranges = Melee, 1 Target, Double Strike
+effect = Twineedle Poisons the target on an Accuracy Check of 18+.
+contest_type = Cool
+contest_effect = Reliable
+[U-Turn]
+page = 349
+type = Bug
+frequency = At-Will
+ac = 2
+damage_base = 3
+damage_roll = 2d6+10
+damage_fixed = 17
+class = Physical
+ranges = Melee, 1 Target, Dash
+effect = If U-Turn successfully hits its target, the user deals damage and then immediately is returned to its Poké Ball in the same turn. A New Pokémon may immediately be sent out. Using U-Turn lets a Trapped user be recalled.
+contest_type = Cute
+contest_effect = Inversed Appeal
+[X-Scissor]
+page = 349
+type = Bug
+frequency = At-Will
+ac = 2
+damage_base = 8
+damage_roll = 2d8+10
+damage_fixed = 19
+class = Physical
+ranges = Melee, 1 Target, Dash
+contest_type = Beauty
+contest_effect = Exhausting Act
 ; [Template]
 ; page = 
 ; type = 
