Added Pidgey family.

--- a/pokedex_105_plus.ini
+++ b/pokedex_105_plus.ini
@@ -2296,6 +2296,100 @@ skills = Athletics:3d6, Acrobatics:4d6+2, Combat:2d6, Stealth:2d6, Perception:5d
 level_moves = 10:Struggle Bug, 17:Psybeam, 21:Supersonic, 25:Draining Kiss, 31:Aromatherapy, 35:Bug Buzz, 41:Safeguard, 45:Quiver Dance, 50:Hurricane, 55:Powder
 tm_moves = Calm Mind, Toxic, Hidden Power, Sunny Day, Hyper Beam, Light Screen, Protect, Rain Dance, Roost, Safeguard, Frustration, Solar Beam, Return, Psychic, Double Team, Aerial Ace, Facade, Rest, Attract, Thief, Round, Energy Ball, Acrobatics, Giga Impact, Flash, Struggle Bug, Psych Up, Infestation, Dream Eater, Swagger, Sleep Talk, U-Turn, Substitute, Confide
 tutor_moves = Bug Bite, Electroweb, Endeavor, Giga Drain, Gust (N), Hold Hands, Light Screen (N), Poison Powder (N), Powder (N), Signal Beam, Sleep Powder (N), Snore, Stun Spore (N), Tailwind
+[Pidgey]
+page = 86
+legendary = False
+fossil = False
+base_hp = 4
+base_attack = 5
+base_defense = 4
+base_special_attack = 4
+base_special_defense = 4
+base_speed = 6
+types = Normal, Flying
+basic_abilities = Keen Eye, Tangled Feet
+advanced_abilities = Big Pecks, Blow Away
+high_ability = Run Away
+evolutions = Pidgeotto,15
+minimum_level = 1
+diets = Herbivore
+habitats = Forest, Urban
+egg_groups = Flying
+gender_ratio_m = 50
+average_hatch_rate_days = 7
+family = Pidgey, Pidgeotto, Pidgeot
+capabilities = Overland:2, Swim:2, Sky:5, High Jump:1, Long Jump:1, Power:1, Underdog
+height = 1'0",0.3m
+height_class = Small
+weight = 4 lbs.,1.8kg
+weight_class = 1
+skills = Athletics:2d6, Acrobatics:3d6, Combat:2d6, Stealth:3d6, Perception:3d6, Focus:2d6
+level_moves = 1:Tackle, 5:Sand Attack, 9:Gust, 13:Quick Attack, 17:Whirlwind, 21:Twister, 25:Feather Dance, 29:Agility, 33:Wing Attack, 37:Roost, 41:Tailwind, 45:Mirror Move, 49:Air Slash, 53:Hurricane
+hm_moves = Fly
+tm_moves = Toxic, Hidden Power, Sunny Day, Protect, Rain Dance, Roost, Frustration, Return, Double Team, Aerial Ace, Facade, Rest, Attract, Thief, Round, Steel Wing, Swagger, Sleep Talk, U-Turn, Substitute
+egg_moves = Air Cutter, Air Slash, Brave Bird, Defog, Feint Attack, Foresight, Pursuit, Steel Wing, Uproar
+tutor_moves = Air Cutter, Defog, Double-Edge, Heat Wave, Mud-Slap, Ominous Wind, Pluck, Roost, Sky Attack, Sleep Talk, Snore, Swift, Tailwind, Twister, Uproar, Work Up
+[Pidgeotto]
+page = 87
+legendary = False
+fossil = False
+base_hp = 6
+base_attack = 6
+base_defense = 6
+base_special_attack = 5
+base_special_defense = 5
+base_speed = 7
+types = Normal, Flying
+basic_abilities = Keen Eye, Tangled Feet
+advanced_abilities = Big Pecks, Blow Away
+high_ability = Competitive
+evolutions = Pidgeot,30
+minimum_level = 15
+diets = Carnivore
+habitats = Forest
+egg_groups = Flying
+gender_ratio_m = 50
+family = Pidgey, Pidgeotto, Pidgeot
+capabilities = Overland:3, Swim:2, Sky:7, High Jump:2, Long Jump:2, Power:3, Underdog
+height = 3'7",1.1m
+height_class = Medium
+weight = 66.1 lbs.,30.0kg
+weight_class = 3
+skills = Athletics:3d6+1, Acrobatics:3d6+2, Combat:3d6, Stealth:2d6+2, Perception:3d6+2, Focus:3d6
+level_moves = 5:Sand Attack, 9:Gust, 13:Quick Attack, 17:Whirlwind, 22:Twister, 27:Feather Dance, 32:Agility, 37:Wing Attack, 42:Roost, 47:Tailwind, 52:Mirror Move, 57:Air Slash, 62:Hurricane
+hm_moves = Fly
+tm_moves = Toxic, Hidden Power, Sunny Day, Protect, Rain Dance, Roost, Frustration, Return, Double Team, Aerial Ace, Facade, Rest, Attract, Thief, Round, Steel Wing, Swagger, Sleep Talk, U-Turn, Substitute
+tutor_moves = Air Cutter, Defog, Double-Edge, Heat Wave, Mud-Slap, Ominous Wind, Pluck, Roost, Sky Attack, Sleep Talk, Snore, Steel Wing, Swift, Tailwind, Twister, Uproar, Work Up
+[Pidgeot]
+page = 88
+legendary = False
+fossil = False
+base_hp = 8
+base_attack = 8
+base_defense = 8
+base_special_attack = 7
+base_special_defense = 7
+base_speed = 10
+types = Normal, Flying
+basic_abilities = Keen Eye, Tangled Feet
+advanced_abilities = Rocket, Blow Away
+high_ability = Competitive
+minimum_level = 30
+diets = Carnivore
+habitats = Forest
+egg_groups = Flying
+gender_ratio_m = 50
+family = Pidgey, Pidgeotto, Pidgeot
+capabilities = Overland:4, Swim:3, Sky:9, High Jump:3, Long Jump:3, Power:5, Guster, Mountable:1
+height = 4'1"”,1.5m
+height_class = Large
+weight = 87.1 lbs.,39.5kg
+weight_class = 5
+skills = Athletics:4d6+2, Acrobatics:4d6+1, Combat:4d6+1, Stealth:2d6, Perception:4d6+3, Focus:4d6
+level_moves = 5:Sand Attack, 9:Gust, 13:Quick Attack, 17:Whirlwind, 22:Twister, 27:Feather Dance, 32:Agility, 38:Wing Attack, 44:Roost, 50:Tailwind, 56:Mirror Move, 62:Air Slash, 68:Hurricane
+hm_moves = Fly
+tm_moves = Toxic, Hidden Power, Sunny Day, Hyper Beam, Protect, Rain Dance, Roost, Frustration, Return, Double Team, Aerial Ace, Facade, Rest, Attract, Thief, Round, Steel Wing, Giga Impact, Swagger, Sleep Talk, U-Turn, Substitute
+tutor_moves = Air Cutter, Defog, Double-Edge, Heat Wave, Mud-Slap, Ominous Wind, Pluck, Roost, Sky Attack, Sleep Talk, Snore, Steel Wing, Swift, Tailwind, Twister, Uproar, Work Up
 [Fletchling]
 page = 95
 legendary = False
@@ -3055,7 +3149,7 @@ tutor_moves = Any
 ; height_class = 
 ; weight = 
 ; weight_class = 
-; skills = Athletics:, Acrobatics:, Combat:, Stealth:, Perception:, Focus:
+; skills = Athletics:d6, Acrobatics:d6, Combat:d6, Stealth:d6, Perception:d6, Focus:d6
 ; level_moves = 
 ; hm_moves = 
 ; tm_moves = 
