Removed character encoding couldn't cope with.

--- a/pokedex_105_plus.ini
+++ b/pokedex_105_plus.ini
@@ -2381,7 +2381,7 @@ egg_groups = Flying
 gender_ratio_m = 50
 family = Pidgey, Pidgeotto, Pidgeot
 capabilities = Overland:4, Swim:3, Sky:9, High Jump:3, Long Jump:3, Power:5, Guster, Mountable:1
-height = 4'1"”,1.5m
+height = 4'1",1.5m
 height_class = Large
 weight = 87.1 lbs.,39.5kg
 weight_class = 5
