Added missing skill values to Omastar.

--- a/pokedex_105_plus.ini
+++ b/pokedex_105_plus.ini
@@ -3086,7 +3086,7 @@ height = 3'3", 1.0m
 height_class = Medium
 weight = 77.2 lbs., 35.0kg
 weight_class = 3
-skills = Athletics:, Acrobatics:, Combat:, Stealth:, Perception:, Focus:
+skills = Athletics:3d6+2, Acrobatics:2d6, Combat:3d6+2, Stealth:3d6+2, Perception:3d6+1, Focus:4d6+2
 level_moves = 7:Bite, 10:Water Gun, 16:Rollout, 19:Leer, 25:Mud Shot, 28:Brine, 34:Protect, 37:Ancient Power, 40:Spike Cannon, 48:Tickle, 56:Rock Blast, 67:Shell Smash, 75:Hydro Pump
 hm_moves = Surf, Waterfall, Dive
 tm_moves = Toxic, Hail, Hidden Power, Ice Beam, Blizzard, Protect, Rain Dance, Frustration, Smack Down, Return, Double Team, Sandstorm, Rock Tomb, Facade, Rest, Attract, Thief, Round, Scald, Rock Polish, Gyro Ball, Rock Slide, Swagger, Sleep Talk, Substitute, Rock Smash
